stop filtering empty statistics